fix: issue with wrong padding for badge

--- a/packages/components/src/components/badge/badge.scss
+++ b/packages/components/src/components/badge/badge.scss
@@ -48,13 +48,6 @@
 	block-size: fit-content;
 	inline-size: fit-content;
 
-	&:empty,
-	> span:empty {
-		block-size: var(--badge-size);
-		inline-size: var(--badge-size);
-		padding: 0;
-	}
-
 	&:has(.db-icon) {
 		padding: variables.$db-spacing-fixed-3xs;
 	}
@@ -67,10 +60,7 @@
 	&[data-size="medium"] {
 		--badge-size: #{variables.$db-spacing-fixed-sm};
 		@extend %db-overwrite-font-size-sm;
-
-		&:not(:empty, > span:empty) {
-			padding-inline: variables.$db-spacing-fixed-xs;
-		}
+		padding-inline: variables.$db-spacing-fixed-xs;
 
 		&:has(.db-icon) {
 			padding: variables.$db-spacing-fixed-2xs;
@@ -80,6 +70,13 @@
 		.db-icon {
 			@extend %db-overwrite-font-size-sm;
 		}
+	}
+
+	&:empty,
+	> span:empty {
+		block-size: var(--badge-size);
+		inline-size: var(--badge-size);
+		padding: 0;
 	}
 
 	&[data-placement^="corner"] {
